--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "start": "node index.js"
   },
   "engines": {
-    "node":"10.15.3"
+    "node": "10.15.3"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.0",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
@@ -31,6 +32,7 @@
     "lodash": "^4.17.11",
     "mongoose": "^5.5.7",
     "morgan": "^1.9.1",
-    "razorpay": "^2.0.4"
+    "razorpay": "^2.0.4",
+    "unirest": "^0.6.0"
   }
 }
